@@ -1,3 +1,8 @@
+2006-01-19	Mike Bourgeous		<i_am_nitrogen at hotmail.com>
+
+	* Added a set cursor position ioctl.
+	* Removed some more debug printk's.
+
 2006-01-17	Mike Bourgeous		<i_am_nitrogen at hotmail.com>
 
 	* Cleaned some code.
